Completed Footer with Links and Fixed Some W3 Errors Priliminary Creation text added. Removed broken tap to view text filter since it does not work on mobile. Added Back flow buttons for mobile navigation. Added Home Text link

--- a/public_html/Background.html
+++ b/public_html/Background.html
@@ -5,8 +5,6 @@
     <title>Background</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/Temp.css">
@@ -14,7 +12,7 @@
 <body>
 <section class ="header">
     <div class="header-text">
-        <li>IS-601 HW</li>
+        <<li><a href="index.html">IS-601 Project 1</a></li>
     </div>
     <nav>
         <a href="index.html">   <!--<img src="images/logo.png">--></a>
@@ -35,7 +33,7 @@
     <div class="text-box">
         <h1>THEORIES & METHODOLOGIES OF THE INTERNET</h1>
         <p>The Building Principles of The Internet</p>
-        <a href="People.html"class="start-btn">Start Learning</a>
+        <a href="People.html" class="start-btn">Start Learning</a>
 
     </div>
 </section>
@@ -114,33 +112,23 @@
     </div>
 </section>
 
-<!--Fifth Section-->
 <section class="fifthsection">
-    <h1> Fifth Section</h1>
-    <a href=""class="start-btn">CLICK HERE TO LEARN MORE</a>
+    <h1> RETURN TO HOME SCREEN</h1>
+    <a href="index.html"class="start-btn">CLICK HERE</a>
 </section>
 
 
 <!--Footer Section-->
 <section class="footer">
-    <h4> Footer</h4>
-    <p>CLICK HERE TO LEARN MORE</p>
+    <h4>Created By, <br>Sarah Voishnis</h4>
+    <h5><a href="https://github.com/svoishnis/Internet-History"> Project Repository</a>
+        <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&showimagereport=yes&doc=http%3A%2F%2Finthis.eastus.azurecontainer.io%2Findex.html#l46c42">W3C Validation</a></h5>
 </section>
 
 
 
 
-<!--Javascript for Toggling Menu for Small Screens-->
-<script>
-    var navLinks = document.getElementByID(navLinks);
 
-    function showMenu(){
-        navLinks.style.right="0";
-    }
-    function hideMenu(){
-        navLinks.style.right="200px";
-    }
-</script>
 </body>
 
 </html>
