--- a/public_html/Creation.html
+++ b/public_html/Creation.html
@@ -5,8 +5,6 @@
     <title>Creation</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/Temp.css">
@@ -14,7 +12,7 @@
 <body>
 <section class ="header">
     <div class="header-text">
-        <li>IS-601 HW</li>
+        <li><a href="index.html">IS-601 Project 1</a></li>
     </div>
     <nav>
         <a href="index.html">   <!--<img src="images/logo.png">--></a>
@@ -35,45 +33,43 @@
     <div class="text-box">
         <h1>WHERE DID THE INTERENT COME FROM?</h1>
         <p>The Internet's Origin Story</p>
-        <a href="Background.html"class="start-btn">Next Section</a>
+        <a href="Background.html" class="start-btn">Next Section</a>
 
     </div>
 </section>
 <!--Sixth Section-->
 <section class="sixthsection" id="fframe">
-    <h1>Accomplishments That Helped Make The Internet Possible<br><br></h1>
+    <h1>The Internet's Origin Story<br><br></h1>
     <div class="sixthsection-con">
         <div class="sixthsection-row">
             <div class="sixthsection-col">
                 <ul class="infoList"></ul>
                 <li>
-                    <h4>JCR Licklider</h4>
+                    <h4>Why was it Invented?</h4>
                     <ul>
-                        <li> - “Father of Information Theory”
-                            <br>- Invented the mathematics or theoretical groundwork for a way that a message could self-correct itself and check if the rest of the message is correct.
-                            <br>- Rather than send one long message we send the in small portions.
-                            <br>- This was the functional theory for packet-switching
+                        <li> - After World War II, our technology at the time for communicating relied on circuit switching
+                            <br>- Circuit switching – positive and negative connections in a loop. You need a direct connection.
+                            <br>- With the advent of nuclear bombs, the circuit switching boards were seen as vulnerable to attack. With one nuclear attack the US could lose all communication.
+                            <br>- After World War II, General Eisenhower worked towards standardizing research and development in a central hub from the previously divided efforts of the individual government branches.
+                            <br>- There was a fear that investing solely in the military would not end well and that civilian involvement would be needed. ARPA was created for that purpose.
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <h4>Robert Elien Kham</h4>
+                    <h4>ARPA</h4>
                     <ul>
-                        <li> - Robert Elien Kham made the first hardware in 1965 – 1969 and sent the first packet using these self-correcting messages.
-                            <br> - ARPANET was a direct result of this technology that focused solving two of the main issues
-                            <br> - With circuit switching, if the wire was cut then there is no way to send the message over to confirm there was no loss of information or tampering.
-                            <br> - The desire to send data rather than just a voice.
-                            <br> - By 1972, the ARPANET composed of 37 companies including universities, research collaborators, and government labs.
+                        <li> - ARPA – stands for Advanced Research Projects Agency of the United States Department of Defense
+                            <br> - ARPA manages research between universities, private companies, and the government.
+                            <br> - ARPANET was one of the first project or initiative in 1966. This was the solution to the vulnerability of the circuit switching technology to attack.
+                            <br> - ARPANET stands for the Advanced Research Project Agency Network
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <h4>Bill Gates</h4>
+                    <h4>PARC</h4>
                     <ul>
-                        <li>- Co-founder and CEO of Microsoft
-                            <br>- Bill Gates was able to commission an operating system for IBM from an electronics company and made it work on their computers
-                            <br>- Created the MSN – the Microsoft security network thought the internet was like a toll road
-                            <br>- Feared the growth of Netscape to change the foundation of the Internet where the browsers could hold the power
+                        <li>- PARC is a research group started by the Xerox company
+                            <br>- They invented everything from mouses, GUIs, and most common office tools in order to leverage the military network for business office use to create the “office of the future"
                         </li>
                     </ul>
                 </li>
@@ -115,9 +111,18 @@
     </div>
     </div>
 </section>
+
+<!--Fifth Section-->
+<section class="fifthsection">
+    <h1> RETURN TO HOME SCREEN</h1>
+    <a href="index.html"class="start-btn">CLICK HERE</a>
+</section>
+
 <!--Footer Section-->
 <section class="footer">
-    <p>Created By, <br>Sarah Voishnis</br></p>
+    <h4>Created By, <br>Sarah Voishnis</h4>
+    <h5><a href="https://github.com/svoishnis/Internet-History"> Project Repository</a>
+        <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&showimagereport=yes&doc=http%3A%2F%2Finthis.eastus.azurecontainer.io%2Findex.html#l46c42">W3C Validation</a></h5>
 </section>
 
 </body>
