--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,8 +5,6 @@
     <title>The History Of the Internet</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/Temp.css">
@@ -14,12 +12,11 @@
 <body>
 <section class ="header">
     <div class="header-text">
-        <li><i>IS-601 HW</i></li>
+        <li><a href="index.html">IS-601 Project 1</a></li>
     </div>
     <nav>
         <a href="index.html"></a>
         <div class="nav-links" id="navLinks">
-            <i class="fa fa-times-circle" onclick="hideMenu()"></i>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="People.html">PEOPLE</a></li>
@@ -29,35 +26,21 @@
                 <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
-        <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
-
     <div class="text-box">
-
         <h1>THE HISTORY OF THE INTERNET</h1>
         <p>A brief overview of important information to know about the Internet</p>
-        <a href="People.html"class="start-btn">Start Learning</a>
-
+        <a href="People.html" class="start-btn">Start Learning</a>
     </div>
 </section>
 
 <!--Footer Section-->
 <section class="footer">
-    <p>Created By, <br>Sarah Voishnis</br></p>
+    <h4>Created By, <br>Sarah Voishnis</h4>
+    <h5><a href="https://github.com/svoishnis/Internet-History"> Project Repository</a>
+    <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&showimagereport=yes&doc=http%3A%2F%2Finthis.eastus.azurecontainer.io%2Findex.html#l46c42">W3C Validation</a></h5>
 </section>
 
-
-<!--BROKEN!!!!!!! - Javascript for Toggling Menu for Small Screens-->
-<script>
-    var navLinks = document.getElementByID(navLinks);
-
-    function showMenu(){
-        navLinks.style.right="0";
-    }
-    function hideMenu(){
-        navLinks.style.right="200px";
-    }
-</script>
 </body>
 
 </html>
