--- a/public_html/Inventions.html
+++ b/public_html/Inventions.html
@@ -5,8 +5,6 @@
     <title>Inventions</title>
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="description" content="This is an example of a meta description, This will often how up in the search results">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="CSS/Temp.css">
@@ -14,7 +12,7 @@
 <body>
 <section class ="header">
     <div class="header-text">
-        <li>IS-601 HW</li>
+        <li><a href="index.html">IS-601 Project 1</a></li>
     </div>
     <nav>
         <a href="index.html">   <!--<img src="images/logo.png">--></a>
@@ -29,18 +27,40 @@
                 <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
-        <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 
     <div class="text-box">
         <h1>INNOVATIONS</h1>
         <p>Ideas that Make the Internet What It Is Today</p>
-        <a href="Creation.html"class="start-btn">Next Section</a>
+        <a href="Creation.html" class="start-btn">Next Section</a>
 
     </div>
 </section>
 
-<!-- Third Section-->
+<!--Fourth Section-->
+<section class="fourthsection">
+    <h1>Miscellaneous Facts Of the Internet</h1>
+    <div class="row">
+        <div class="fourthsection-col">
+            <img src="images/pexels-athena-2582937.jpg">
+            <h3>Silicon Chip:</h3>
+            <p>Founded by Intel Co-Founder Gordon Moore</p>
+        </div>
+        <div class="fourthsection-col">
+            <img src="images/pexels-shvets-production-7191989.jpg">
+            <h3>Encryption:</h3>
+            <p>Public Key Cryptography was developed by 3 mathematicians.It is now considered the lynchpin of secure online commerce.</p>
+        </div>
+        <div class="fourthsection-col">
+            <img src="images/pexels-josh-sorenson-1054397.jpg">
+            <h3>Moore’s Law:</h3>
+            <p>The speed and power of integrated circuits doubles every 18 months. The industry lives by this law  aims to make transistors smaller and smaller</p>
+        </div>
+    </div>
+    </div>
+</section>
+
+<!-- Third Section DID NOT WORK ON MOBILE WELL
 
 <section class="thirdsection">
     <h1>Miscellaneous Facts Of the Internet</h1>
@@ -69,12 +89,19 @@
         </div>
     </div>
     </div>
-</section>
+</section> -->
 
+<!--Fifth Section-->
+<section class="fifthsection">
+    <h1> RETURN TO HOME SCREEN</h1>
+    <a href="index.html"class="start-btn">CLICK HERE</a>
+</section>
 
 <!--Footer Section-->
 <section class="footer">
-    <p>Created By, <br>Sarah Voishnis</br></p>
+    <h4>Created By, <br>Sarah Voishnis</h4>
+    <h5><a href="https://github.com/svoishnis/Internet-History"> Project Repository</a>
+        <a href="https://validator.w3.org/nu/?showsource=yes&showoutline=yes&showimagereport=yes&doc=http%3A%2F%2Finthis.eastus.azurecontainer.io%2Findex.html#l46c42">W3C Validation</a></h5>
 </section>
 </body>
 
