Add Image copywrite remove extra test pages and rework next page buttons. Miscellaneous fixes

--- a/public_html/Background.html
+++ b/public_html/Background.html
@@ -34,7 +34,9 @@
         <h1>THEORIES & METHODOLOGIES OF THE INTERNET</h1>
         <p>The Building Principles of The Internet</p>
         <a href="People.html" class="start-btn">Start Learning</a>
-
+         </div>
+    <div class="picture-attribution">
+        <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
     </div>
 </section>
 
@@ -115,6 +117,9 @@
 <section class="fifthsection">
     <h1> RETURN TO HOME SCREEN</h1>
     <a href="index.html"class="start-btn">CLICK HERE</a>
+    <div class="picture-attribution-Fifth">
+        <h4>“PHP Screengrab”, by Pixabay, licensed under CC </h4>
+    </div>
 </section>
 
 
