--- a/public_html/Creation.html
+++ b/public_html/Creation.html
@@ -23,8 +23,6 @@
                 <li><a href="People.html">PEOPLE</a></li>
                 <li><a href="Inventions.html">INVENTIONS</a></li>
                 <li><a href="Creation.html">CREATION</a></li>
-                <li><a href="Background.html">BACKGROUND</a></li>
-                <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -33,8 +31,9 @@
     <div class="text-box">
         <h1>WHERE DID THE INTERENT COME FROM?</h1>
         <p>The Internet's Origin Story</p>
-        <a href="Background.html" class="start-btn">Next Section</a>
-
+    </div>
+    <div class="picture-attribution">
+        <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
     </div>
 </section>
 <!--Sixth Section-->
@@ -73,41 +72,12 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <h4>Al Gore</h4>
-                    <ul>
-                        <li>- Senator and sponsor of the bill that made the ARPANET public
-                            <br>- The Internet became available in August 6th, 1991
-                        </li>
-                    </ul>
-                </li>
                 </ul>
             </div>
         </div>
     </div>
-    <!-- <img src="images/technology-networking.jpg"> -->
-    </div>
-</section>
-<!--Fourth Section-->
-<section class="fourthsection">
-    <h1>COMPANIES</h1>
-    <p>Several accomplishments come from businesses and not just individuals</p>
-    <div class="row">
-        <div class="fourthsection-col">
-            <img src="images/pexels-nothing-ahead-4567339.jpg">
-            <h3>Microsoft</h3>
-            <p>More that half of all business now use windows operating systems</p>
-        </div>
-        <div class="fourthsection-col">
-            <img src="images/pexels-ricardo-esquivel-3370333.jpg">
-            <h3>Apple</h3>
-            <p>Created the first personal computer</p>
-        </div>
-        <div class="fourthsection-col">
-            <img src="images/pexels-laura-tancredi-7078022.jpg">
-            <h3>US Government</h3>
-            <p>Contributes towards laws and regulations</p>
-        </div>
+    <div class="picture-attribution-sixth">
+        <h5>"Black and Gray Laptop Computer Turned on Doing Computer Codes", by Christina Morillo, licensed under CC</h5>
     </div>
     </div>
 </section>
@@ -116,6 +86,9 @@
 <section class="fifthsection">
     <h1> RETURN TO HOME SCREEN</h1>
     <a href="index.html"class="start-btn">CLICK HERE</a>
+    <div class="picture-attribution-Fifth">
+        <h4>“PHP Screengrab”, by Pixabay, licensed under CC </h4>
+    </div>
 </section>
 
 <!--Footer Section-->
