--- a/public_html/Inventions.html
+++ b/public_html/Inventions.html
@@ -23,8 +23,6 @@
                 <li><a href="People.html">PEOPLE</a></li>
                 <li><a href="Inventions.html">INVENTIONS</a></li>
                 <li><a href="Creation.html">CREATION</a></li>
-                <li><a href="Background.html">BACKGROUND</a></li>
-                <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
     </nav>
@@ -33,7 +31,9 @@
         <h1>INNOVATIONS</h1>
         <p>Ideas that Make the Internet What It Is Today</p>
         <a href="Creation.html" class="start-btn">Next Section</a>
-
+    </div>
+    <div class="picture-attribution">
+        <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
     </div>
 </section>
 
@@ -43,16 +43,19 @@
     <div class="row">
         <div class="fourthsection-col">
             <img src="images/pexels-athena-2582937.jpg">
+            <h5>"Black and Gray Motherboard", by Athena, licensed under CC</h5>
             <h3>Silicon Chip:</h3>
             <p>Founded by Intel Co-Founder Gordon Moore</p>
         </div>
         <div class="fourthsection-col">
             <img src="images/pexels-shvets-production-7191989.jpg">
+            <h5>"Black entrepreneur typing on convenient wireless keyboard", by SHVETS production, licensed under CC</h5>
             <h3>Encryption:</h3>
             <p>Public Key Cryptography was developed by 3 mathematicians.It is now considered the lynchpin of secure online commerce.</p>
         </div>
         <div class="fourthsection-col">
             <img src="images/pexels-josh-sorenson-1054397.jpg">
+            <h5>"Ethernet Cables Plugged on a Server Rack", by Josh Sorenson, licensed under CC</h5>
             <h3>Moore’s Law:</h3>
             <p>The speed and power of integrated circuits doubles every 18 months. The industry lives by this law  aims to make transistors smaller and smaller</p>
         </div>
@@ -95,6 +98,9 @@
 <section class="fifthsection">
     <h1> RETURN TO HOME SCREEN</h1>
     <a href="index.html"class="start-btn">CLICK HERE</a>
+    <div class="picture-attribution-Fifth">
+        <h4>“PHP Screengrab”, by Pixabay, licensed under CC </h4>
+    </div>
 </section>
 
 <!--Footer Section-->
