--- a/public_html/People.html
+++ b/public_html/People.html
@@ -23,8 +23,6 @@
         <li><a href="People.html">PEOPLE</a></li>
         <li><a href="Inventions.html">INVENTIONS</a></li>
         <li><a href="Creation.html">CREATION</a></li>
-        <li><a href="Background.html">BACKGROUND</a></li>
-        <li><a href="Today.html">TODAY</a></li>
       </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -34,7 +32,9 @@
     <h1>PEOPLE WHO MADE THE INTERNET POSSIBLE</h1>
     <p>A brief overview of important people who had a huge influence on the creation of the Internet</p>
     <a href="Inventions.html" class="start-btn">Next Section</a>
-
+  </div>
+  <div class="picture-attribution">
+    <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
   </div>
 </section>
 <!--Sixth Section-->
@@ -87,7 +87,9 @@
       </div>
     </div>
   </div>
-  <!-- <img src="images/technology-networking.jpg"> -->
+  <div class="picture-attribution-sixth">
+    <h5>"Black and Gray Laptop Computer Turned on Doing Computer Codes", by Christina Morillo, licensed under CC</h5>
+  </div>
   </div>
 </section>
 <!--Fourth Section-->
@@ -97,26 +99,34 @@
   <div class="row">
     <div class="fourthsection-col">
       <img src="images/pexels-nothing-ahead-4567339.jpg">
+      <h5>"Close Up of a Keyboard", by Nothing Ahead, licensed under CC</h5>
       <h3>Microsoft</h3>
       <p>More that half of all business now use windows operating systems</p>
     </div>
+
     <div class="fourthsection-col">
       <img src="images/pexels-ricardo-esquivel-3370333.jpg">
+      <h5>"Apple Logo", by Ricardo Esquivel, licensed under CC</h5>
       <h3>Apple</h3>
       <p>Created the first personal computer</p>
     </div>
     <div class="fourthsection-col">
       <img src="images/pexels-laura-tancredi-7078022.jpg">
+      <h5>"USA flags on wall of governmental building facade in city", by Laura Tancredi, licensed under CC</h5>
       <h3>US Government</h3>
       <p>Contributes towards laws and regulations</p>
     </div>
   </div>
   </div>
+
 </section>
 <!--Fifth Section-->
 <section class="fifthsection">
   <h1> RETURN TO HOME SCREEN</h1>
   <a href="index.html"class="start-btn">CLICK HERE</a>
+  <div class="picture-attribution-Fifth">
+    <h4>“PHP Screengrab”, by Pixabay, licensed under CC </h4>
+  </div>
 </section>
 
 <!--Footer Section-->
