--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,8 +22,6 @@
                 <li><a href="People.html">PEOPLE</a></li>
                 <li><a href="Inventions.html">INVENTIONS</a></li>
                 <li><a href="Creation.html">CREATION</a></li>
-                <li><a href="Background.html">BACKGROUND</a></li>
-                <li><a href="Today.html">TODAY</a></li>
             </ul>
         </div>
     </nav>
@@ -31,6 +29,9 @@
         <h1>THE HISTORY OF THE INTERNET</h1>
         <p>A brief overview of important information to know about the Internet</p>
         <a href="People.html" class="start-btn">Start Learning</a>
+    </div>
+    <div class="picture-attribution">
+        <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
     </div>
 </section>
 
