--- a/public_html/Today.html
+++ b/public_html/Today.html
@@ -34,7 +34,9 @@
         <h1>THE MODERN INTERNET</h1>
         <p>A Quick Peek Into The Internet of Today</p>
         <a href="People.html"class="start-btn">Start Learning</a>
-
+    </div>
+    <div class="picture-attribution">
+        <h4>“Computer Set Up on a Workspace”, by Mateusz Dach, licensed under CC </h4>
     </div>
 </section>
 
@@ -97,6 +99,9 @@
 <section class="fifthsection">
     <h1> RETURN TO HOME SCREEN</h1>
     <a href="index.html"class="start-btn">CLICK HERE</a>
+    <div class="picture-attribution-Fifth">
+        <h4>“PHP Screengrab”, by Pixabay, licensed under CC </h4>
+    </div>
 </section>
 
 <!--Fifth Section-->
